# signalwire-python

./: .coveragerc  .doc_surface_floor  .drone.yml  .gitignore  ACCESSOR_TRUTH_ALLOW.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  DOC_AUDIT_IGNORE.md  DOC_CLI_ALLOW.md  Dockerfile  EXAMPLES_RUN_ALLOW.md  FIXES.md  LICENSE.md  Makefile  Pipfile  README.md  REST_COVERAGE_GAPS.md  ROOT_HYGIENE_ALLOW.md  ROUTE_COLLISION_ALLOW.md  SNIPPET_RUN_ALLOW.md  WIRED_MODES.md  WIRE_VIOLATIONS_ALLOW.md  formatted_version.md  one_sdk.md  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  setup.py  signalwire_ai_blog.md  version_bump.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  doc-audit.yml  live-smoke.yml  multi-os.yml  nightly.yml  publish-dev.yml  publish-release.yml  reference-docs.yml  test.yml
docs/: MIGRATION-2.0.md  agent_guide.md  api_reference.md  architecture.md  bedrock_agent.md  cli_guide.md  cloud_functions_guide.md  configuration.md  contexts_guide.md  datamap_guide.md  livekit_comparison.md  llm_parameters.md  mcp_gateway_reference.md  mcp_integration.md  pipecat_comparison.md  sdk_features.md  search_deployment.md  search_indexing.md  search_integration.md  search_overview.md  search_troubleshooting.md  security.md  skills_parameter_schema.md  skills_system.md  swaig_reference.md  swml_service_guide.md  third_party_skills.md  web_service.md
docs/docs/: api_reference.md  bedrock_agent.md  cli_guide.md  livekit_comparison.md  llm_parameters.md  mcp_integration.md  search_indexing.md  search_integration.md  search_overview.md  search_troubleshooting.md  security.md  swaig_reference.md
eng/: validate_schema.py
examples/: README.md  advanced_datamap_demo.py  auto_vivified_example.py  basic_swml_service.py  bedrock_agent_run.py  bedrock_agent_test.py  bedrock_server_test.py  bedrock_with_skills.py  call_flow_and_actions_demo.py  comprehensive_dynamic_agent.py  concierge_agent_example.py  contexts_demo.py  custom_path_agent.py  data_map_demo.py  datasphere_multi_instance_demo.py  datasphere_serverless_demo.py  datasphere_serverless_env_demo.py  datasphere_webhook_env_demo.py  declarative_agent.py  dynamic_info_gatherer_example.py  dynamic_swml_service.py  faq_bot_agent.py  gather_info_demo.py  gather_per_question_functions_demo.py  info_gatherer_example.py  joke_agent.py  joke_skill_demo.py  kubernetes_ready_agent.py  lambda_agent.py  laml.py  llm_params_demo.py  make_call.py  mcp_agent.py  mcp_gateway_demo.py  multi_agent_server.py  multi_endpoint_agent.py  pgvector_search_agent.py  quickstart_agent.py  quickstart_relay.py  quickstart_rest.py  (+30 more)
examples/examples/: Dockerfile.flexible  Dockerfile.k8s  README.md  advanced_datamap_demo.py  basic_swml_service.py  bedrock_agent_run.py  bedrock_agent_test.py  comprehensive_dynamic_agent.py  custom_path_agent.py  datasphere_serverless_demo.py  declarative_agent.py  dynamic_swml_service.py  info_gatherer_example.py  joke_skill_demo.py  k8s-deployment.yaml  kubernetes_ready_agent.py  lambda_agent.py  llm_params_demo.py  mcp_gateway_demo.py  multi_agent_server.py  pgvector_search_agent.py  receptionist_agent_example.py  record_call_example.py  room_and_sip_example.py  search_server_standalone.py  sigmond_remote_search.py  simple_static_agent.py  skills_demo.py  survey_agent_example.py  swml_service_example.py  swml_service_routing_example.py  tap_example.py  web_search_agent.py  web_search_multi_instance_demo.py
examples/laml/: laml.py  make_call.py  send_sms.py
examples/relay/: call-connect.py  call-detect.py  call-fax-receive.py  call-fax-send.py  call-record.py  call-tap.py  consumer.py  create-task.py
fixtures/: test_applications  test_local_numbers  test_media  test_trasncriptions
fixtures/cassettes/: test_accounts  test_applications  test_conference_members  test_conferences  test_fetch_fax  test_fetch_fax_media  test_fetch_fax_media_instance  test_incoming_phone_numbers  test_list_fax  test_local_numbers  test_local_numbers_ends_with  test_local_numbers_starts_with  test_media  test_messages  test_queue_members  test_queues  test_recordings  test_send_fax  test_toll_free_numbers  test_transcriptions
livewire/: README.md
livewire/docs/: migration-guide.md
livewire/examples/: livewire_basic_agent.py  livewire_handoff.py  livewire_multi_tool.py
man/: sw-agent-init.1  sw-search.1
mcp/swml-schema-search/: swml_schema_mcp.py
mcp_gateway/: README.md  gateway_service.py  mcp_manager.py  session_manager.py
mcp_gateway/test/: test_agent.py  todo_mcp.py
reference/: README.md  dev-server.sh  gen.sh  mkdocs.yml  requirements.txt
reference/overrides/: main.html
relay/: README.md
relay/docs/: call-methods.md  client-reference.md  events.md  getting-started.md  messaging.md
relay/examples/: relay_answer_and_welcome.py  relay_dial_and_play.py  relay_ivr_connect.py
relay/relay/: README.md
rest/: README.md
rest/docs/: calling.md  client-reference.md  fabric.md  getting-started.md  namespaces.md
rest/examples/: rest_10dlc_registration.py  rest_bind_phone_to_swml_webhook.py  rest_calling_ivr_and_ai.py  rest_calling_play_and_record.py  rest_compat_laml.py  rest_datasphere_search.py  rest_fabric_conferences_and_routing.py  rest_fabric_subscribers_and_sip.py  rest_fabric_swml_and_callflows.py  rest_manage_resources.py  rest_phone_number_management.py  rest_queues_mfa_and_recordings.py  rest_video_rooms.py
rest/rest/: README.md
scripts/: doc_wire_runner.py  run-ci.sh
signalwire/: __init__.py  request_validator.py
signalwire/blade/: client.py  connection.py  handler.py  helpers.py
signalwire/fax_response/: __init__.py
signalwire/messaging_response/: __init__.py
signalwire/relay/: __init__.py  client.py  constants.py  consumer.py  event.py  helpers.py  message_handler.py  task.py
signalwire/rest/: __init__.py  fax.py
signalwire/signalwire/: __init__.py  agent_server.py  schema.json
signalwire/tests/: __init__.py  test_queues  (+12 more)
signalwire_agents/: __init__.py  agent_server.py
tests/: conftest.py  test_examples.py  test_mcp_integration.py
(+590 files in other folders)
