[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalwire-sdk"
version = "3.0.2"
description = "SignalWire SDK"
authors = [
    {name = "SignalWire Team", email = "info@signalwire.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["signalwire", "ai", "agents", "voice", "telephony", "swaig", "swml"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "PyYAML>=6.0.2",
    "Requests>=2.32.4",
    "docopt>=0.6.2",
    "structlog>=25.3.0",
    "uvicorn>=0.34.2",
    "beautifulsoup4>=4.12.3",
    "pytz>=2023.3",
    "lxml>=4.9.0",
    "jsonschema-rs>=0.20.0",
    "websockets>=12.0",
]

# Optional dependencies for search functionality
[project.optional-dependencies]
# Query existing .swsearch files only (no document processing/building)
search-queryonly = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.8",
]

# Full search functionality (includes document processing and building)
search = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
]

search-full = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    # Document processing dependencies
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "markdown-it-py>=3.0.0",
    "striprtf>=0.0.26",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "python-magic>=0.4.27",
]

# Advanced NLP (optional)
search-nlp = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "spacy>=3.6.0",
]

# All search features
search-all = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "spacy>=3.6.0",
    # Document processing dependencies
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "markdown-it-py>=3.0.0",
    "striprtf>=0.0.26",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "python-magic>=0.4.27",
    # pgvector support
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]

# PostgreSQL pgvector support
pgvector = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]

# MCP Gateway dependencies
mcp-gateway = [
    "flask>=2.0.0",
    "flask-limiter>=3.5.0",
]

# All optional dependencies
all = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "spacy>=3.6.0",
    # Document processing dependencies
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "markdown-it-py>=3.0.0",
    "striprtf>=0.0.26",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "python-magic>=0.4.27",
]

[project.urls]
Homepage = "https://github.com/signalwire/signalwire-agents"

[project.scripts]
swaig-test = "signalwire.cli.swaig_test_wrapper:main"
sw-search = "signalwire.cli.build_search:console_entry_point"
sw-agent-init = "signalwire.cli.init_project:main"
sw-agent-dokku = "signalwire.cli.dokku:main"
mcp-gateway = "signalwire.mcp_gateway.gateway_service:main"
pom-tool = "signalwire.pom.pom_tool:main"

[tool.setuptools]
packages = {find = {where = ["signalwire"], include = ["signalwire*"]}}
include-package-data = true

[tool.setuptools.package-data]
signalwire = [
    "schema.json",
    "**/*.json",
    "skills/*/README.md",
    "skills/README.md"
]

[tool.setuptools.data-files]
"share/man/man1" = [
    "man/swaig-test.1",
    "man/sw-search.1",
    "man/sw-agent-init.1"
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E4/E7/E9 + F are the ruff defaults (E501 line-length intentionally excluded —
# formatting is owned by `ruff format`, not the linter). B = flake8-bugbear
# (likely-bug patterns), S = flake8-bandit (security smells).
select = ["E4", "E7", "E9", "F", "B", "S", "C4", "PERF", "SIM", "PTH", "RET", "RUF", "UP"]

[tool.ruff.lint.per-file-ignores]
# Tests are built on assert; bandit's S101 is noise there.
"tests/**" = ["S101"]
# sw-agent-dokku is a developer-run deploy CLI that shells out to git/ssh with
# fixed list-form arg vectors (shell=False, so no shell interpolation). The
# dynamic parts (app name, dokku host, config vars) are the operator's own CLI
# args for their own deployment — not untrusted server input. S603 (subprocess
# call) and S607 (partial executable path: git/ssh resolved via PATH, the normal
# idiom) are expected and safe across this file.
"signalwire/signalwire/cli/dokku.py" = ["S603", "S607"]
# REST namespace files import spec-generated types under TYPE_CHECKING and use
# them ONLY inside quoted forward-refs — method return annotations
# (`-> "RoomResponse"`) and the generic CRUD-base subscript bindings
# (`class VideoRooms(CrudResource["ListRoomsResponse", "RoomResponse", ...])`).
# Ruff's F401 cannot see usages inside a class-base subscript's string literals,
# so it false-positives "unused import" and `--fix` would strip imports that ARE
# used (breaking mypy). The bindings must stay quoted (a bare name in the base
# subscript is a runtime NameError under TYPE_CHECKING). Exempt F401 here; mypy +
# the SIGNATURES/DRIFT gate prove these imports are real and correct.
"signalwire/signalwire/rest/namespaces/*.py" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/Query()/etc. in argument
# defaults on purpose; B008 (function-call-in-default) is a false positive for it.
# Both the bare (`from fastapi import Depends`) and qualified forms are listed
# because the code imports these names directly.
extend-immutable-calls = [
    "Depends", "fastapi.Depends",
    "Query", "fastapi.Query",
    "Body", "fastapi.Body",
    "Header", "fastapi.Header",
    "Cookie", "fastapi.Cookie",
    "Path", "fastapi.Path",
    "Form", "fastapi.Form",
    "File", "fastapi.File",
    "Security", "fastapi.Security",
]

[tool.mypy]
python_version = "3.10"
files = ["signalwire/signalwire"]
# Third-party packages without type stubs (nltk, sentence_transformers, the
# search/relay stacks) are out of scope — we type our own code, not theirs.
ignore_missing_imports = true
# The bar: our own code is clean. Bodies of untyped defs are checked so real
# type errors inside them surface (this is what found the mixin cluster).
check_untyped_defs = true
warn_unused_ignores = true
# `# type: ignore` is reserved for genuinely-unfixable third-party-stub gaps and
# must carry an error code + reason. warn_unused_ignores keeps them honest.
show_error_codes = true

# numpy (a search/relay-extra runtime dep we do NOT type — same class as nltk /
# sentence_transformers above) ships a `.pyi` that uses the 3.12+ `type X = …`
# statement. mypy pinned to python_version 3.10 parses that stub under the 3.10
# grammar and errors ("Type statement is only supported in Python 3.12 and
# greater") on the 3.12/3.13 CI runners where the new numpy is installed. We
# don't check numpy's types, so skip following into its stubs entirely.
[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
follow_imports_for_stubs = true
